Optional replacement of the window's vertical scrollbar. New option 'replaceWindowScrollbar' is true by default, option 'fixedElements' will be ignored if it set to false.

--- a/css/jquery.uniloader.css
+++ b/css/jquery.uniloader.css
@@ -19,12 +19,15 @@
   top: 0;
   left: 0;
   z-index: 1000;
-  overflow-x: auto;
-  overflow-y: scroll;
   background: rgba(0, 0, 0, .5);
   width: 100%;
   height: 100%;
   opacity: 0;
+}
+
+#uniloader-overlay.append-scrollbars {
+  overflow-x: auto;
+  overflow-y: scroll;
 }
 
 #uniloader-overlay-content {
